output/test/aqs-2.err
output prefix: llvm/test/aqs-2
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'QuickSort'

@list = global [100 x i32] zeroinitializer

define void @main() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/test/aqs-2.llvm" -o "llvm/test/aqs-2.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/test/aqs-2.llvm:7:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/test/aqs-2.llvm.bc" -o "llvm/test/aqs-2.llvm.s" ... ok
linking:gcc -o "llvm/test/aqs-2.llvm.exec" "llvm/test/aqs-2.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/test/aqs-2.llvm.exec ... ok
